[package]
name = "osvr"
version = "0.1.0"
authors = ["Tom Morton <tomm@riseup.net>"]
license = "MIT"
description = "OSVR-Core and OSVR-RenderManager bindings with safe API"
repository = "https://github.com/tomm/osvr-rs.git"

[dependencies]
#osvr-sys = { path = "../osvr-sys-rs" }
osvr-sys = "0.1.0"
gl = "0.6.3"
sdl2 = "0.27"
